# l2_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: object_detection_pcl_live.cpp  object_detection_windowed_live.cpp
config/: unilidar_l2.yaml
include/: l2_driver.hpp  lidar_types.hpp  ws_server.hpp
include/fastlio2/: l2_driver.hpp  lidar_types.hpp  ws_server.hpp
src/: l2_driver.cpp  ws_server.cpp
viz/: package.json  server.js
viz/public/: object_detection.html
